# cppdataflow

./: .gitignore  CMakeLists.txt  README.md
include/: action_block.h  block_i.h  buffer_block.h  consumer_block_i.h  link.h  producer_block_i.h  source_block.h  transform_block.h
include/details/: block_base.h  block_body.h  completable_block.h  complete_msg.h  loop_manager.h  movable_atomic.h  reservable_block.h  single_predecessor_block.h  single_successor_block.h
include/signals/: connection.h  signal.h  signal_base.h
tests/: CMakeLists.txt  test.cpp
